--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.4",
+        "textalk/websocket": "^1.5",
         "zanysoft/laravel-zip": "^1.0"
     },
     "require-dev": {
